tests/typechecking/valid/pro_let_spill.ml
let x = (1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1) + (1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1) + 22 in print_int x
