tests/typechecking/invalid/bad_print_tuple.ml
let x = (1, true) in
print_int x 
